# CodeGen

./: CMakeLists.txt  README.md
include/: codegen.h  graph.h  mlir_emitter.h  test_framework.h
src/: codegen.cpp  graph.cpp  main.cpp  mlir_emitter.cpp  simple_mlp.mlir  verify.py
tests/: test_codegen.cpp  test_graph.cpp  test_main.cpp  test_mlir_emitter.cpp
